--- a/010/style.css
+++ b/010/style.css
@@ -5,3 +5,165 @@
   padding: 0;
   box-sizing: border-box;
 }
+
+body {
+  min-height: 100vh;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  background-color: #dadcf0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.payment {
+  background-color: #fff;
+  color: #212a68;
+  width: 90%;
+  max-width: 600px;
+  padding: 4rem;
+  border-radius: 3.5rem;
+  position: relative;
+}
+
+.card,
+.pay-later {
+  padding-left: 2.5rem;
+}
+
+.card-number,
+.card-date,
+.card-cvc {
+  position: relative;
+  width: 100%;
+}
+
+svg {
+  padding: 0.2rem;
+  margin: 4px;
+}
+
+h2 {
+  margin-bottom: 2rem;
+  font-family: "Times New Roman", Times, serif;
+}
+
+p {
+  font-size: 0.7rem;
+  margin: 1rem 0;
+}
+
+label {
+  font-size: 0.9rem;
+  font-weight: 700;
+}
+
+.card-number,
+.card-date,
+.card-cvc {
+  display: flex;
+  border: 1px solid #dcdcdc;
+  height: 2.5rem;
+}
+
+#card-number,
+#card-date,
+#card-cvc {
+  padding: 0;
+}
+
+#label-checkbox {
+  padding: 0 0.3rem;
+  font-size: 0.7rem;
+  font-weight: 400;
+}
+
+.card-info {
+  display: flex;
+}
+
+input[type="text"] {
+  padding: 0.8rem;
+  width: 100%;
+  border: none;
+  outline: none;
+}
+
+input[type="checkbox"] {
+  margin: 1rem 0 2rem;
+}
+
+input[type="radio"] {
+  position: absolute;
+  opacity: 0;
+  cursor: pointer;
+  height: 2rem;
+  width: 2rem;
+}
+
+.checkmark-first {
+  position: absolute;
+  top: 7.5rem;
+  left: 4rem;
+  height: 23px;
+  width: 23px;
+  background: transparent;
+  border: 2px solid #dcdcdc;
+  border-radius: 50%;
+}
+
+.checkmark-second {
+  position: absolute;
+  top: 20.2rem;
+  left: 4rem;
+  height: 23px;
+  width: 23px;
+  background: transparent;
+  border: 2px solid #dcdcdc;
+  border-radius: 50%;
+}
+
+.container:hover input ~ .checkmark {
+  background-color: #dcdcdc;
+}
+
+.container input:checked ~ .checkmark {
+  background-color: #212a68;
+  border-color: #212a68;
+}
+
+.checkmark:after {
+  content: "";
+  position: absolute;
+  display: none;
+}
+
+.container input:checked ~ .checkmark:after {
+  display: block;
+}
+
+.container .checkmark:after {
+  top: 3px;
+  left: 3px;
+  width: 14px;
+  height: 14px;
+  border-radius: 50%;
+  border-width: 4px;
+  background: white;
+}
+
+.submit {
+  width: 100%;
+  padding: 1.8rem;
+  text-transform: uppercase;
+  background: #212a68;
+  color: #dadcf0;
+  font-weight: 700;
+  cursor: pointer;
+  transition: 0.5s;
+  margin-top: 1.5rem;
+  border-radius: 3px;
+}
+
+button:hover {
+  background: #212a68c5;
+}
